fixed logo overflow

--- a/src/Home.css
+++ b/src/Home.css
@@ -1,5 +1,6 @@
 .Home {
-  width: 100%;
+  width: 100vw;
+  overflow: hidden;
   height: 100%;
   background-color: rgb(2, 2, 49);
   left: 0;
